--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,24 +3,34 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-          cache: 'pip'
-      
+          python-version: "3.x"
+          cache: "pip"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs
-      
-      - name: Build documentation
-        run: mkdocs build
+          pip install mkslides
 
+      - name: Build documentation
+        run: mkslides build .
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./site
+      - id: deployment
+        uses: actions/deploy-pages@v4
