--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,22 +16,23 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          python-version: "3.x"
-          cache: "pip"
+          bun-version: latest
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: bun install
+        working-directory: animations
 
-      - name: Build documentation
-        run: mkslides build -f mkslides.yml notes/
+      - name: Build animations
+        run: bun run build
+        working-directory: animations
 
-      - name: Copy Assets
-        run: cp -r assets site
+      - name: Build notes
+        run: bun run build
+        env:
+          BASE_URL: ${{ github.event.repository.name }}
 
       - uses: actions/upload-pages-artifact@v3
         with:
