--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.8",
     "js-yaml": "^4.1.0",
+    "marked": "^17.0.1",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-stringify": "^10.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "reveal.js": "^5.2.1",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.1.0",
     "vite": "^7.1.5",
     "vite-plugin-handlebars": "^2.0.0"
   }
